--- a/index.html
+++ b/index.html
@@ -21,18 +21,18 @@
             </ul>
         </nav>
 </header>
-<section class="home appear" id="home">
+<section class="home appear active" id="home">
     <div class="content">
         <h2>Hi There,<br/> I'm Akash <span>A S</span></h2>
         <p class="appear">I am into <span class="typing-text">Web Development <strong>|</strong></span></p>
-        <a href="#about" class="btn appear"><span>About Me</span></a>
+        <a  class="btn appear"><span>About Me</span></a>
     </div>
     <div class="image">
         <img class="portrait" src="/images/akash.png" alt="">
     </div>
 </section>
 <!-- about section-->
-<section class="about appear hidden" id="about">
+<section class="about appear" id="about">
     <h2 class="heading">About <span>Me</span></h2>
     <div class="content">
         <h3>I'm Akash</h3>
@@ -57,6 +57,7 @@
 </section>
 <section class="skills" id="skills">
     <div class="tree">
+        <h1 style="text-align: center; font-size: 50px;">Skills and <span>Abilities</span></h1>
         <div class="innertree">
             <div class="uppertree">
                 <div class="branch">
@@ -102,5 +103,46 @@
         </div>
     </div>
 </section>
+<section class="education" id="education">
+    <div class="educationdiv">
+        <h1>My <span>Education</span></h1>
+        <div class="institute">
+            <img class="kv" src="images/kv.png" alt="">
+            <div class="details">
+                <h2>HSC Science | Computer Science</h2>
+                <p>Kendriya Vidhyalaya kanjikode | CBSE</p>
+                <h3>2019-2021 | Completed</h3>
+            </div> 
+        </div>
+        <div class="institute">
+            <img class="scms" src="images/scms.png" alt="">
+            <div class="details">
+                <h2>Bachelor Of Engineering In Computer Science</h2>
+                <p>SCMS School of Engineering And Technology | KTU</p>
+                <h3>2022-2026 | Pursuing</h3>
+            </div>
+        </div>
+    </div>
+</section>
+<section class="contact" id="contact">
+    <h1>Get in <span>touch</span></h1>
+    <div class="contactdetail">
+        <img class="helpdeskimg" src="images/contact.png" alt="">
+        <div class="contacts">
+            <h3>Whatsapp: <span>+91 8590911294</span></h3>
+            <h3>Gmail: <span>akashsumesh2004@gmail.com</span></h3>
+            <div class="logo">
+                <a class="instagramicon" href="https://www.instagram.com/_akash_102/" target="_blank"><img src="images/instagram.svg"></a>
+                <a class="linkedinicon" href="https://www.linkedin.com/in/akash-a-s-919589184/" target="_blank"><img src="images/linkedin.png" alt=""></a>
+            </div>
+        </div>
+    </div>
+    
+</section>
+<footer class="foot">
+    <div>
+        <h3>Designed By Akash <span>A S</span></h3>
+    </div>
+</footer>
 </body>
 </html>
