--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <a  class="btn appear"><span>About Me</span></a>
     </div>
     <div class="image">
-        <img class="portrait" src="/images/akash.png" alt="">
+        <img class="portrait" src="images/akash.png" alt="">
     </div>
 </section>
 <!-- about section-->
