--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             </div>
         
         <div class="resumebtn">
-            <a href="https://drive.google.com/file/d/1rZiXl562q7aVyk1kJ2nO85YBAq8ixTiw/view" target="_blank" class="btn"><span>Resume</span></a>
+            <a href="https://drive.google.com/file/d/1hQeV28wXoOPWYeXVCvR9C_nKeV_B_NMk/view?usp=sharing" target="_blank" class="btn"><span>Resume</span></a>
         </div>
     </div>
     </div>
